# Cinema-Booking-System

./: CMakeLists.txt  CinemaRoom.cpp  CinemaRoom.h  CinemaRoomFactory.cpp  CinemaRoomFactory.h  Description.h  Movie.cpp  Movie.h  MovieDescription.cpp  MovieDescription.h  README.md  Room.cpp  Room.h  RoomDescription.cpp  RoomDescription.h  RoomFactory.h  Seance.cpp  Seance.h  Seat.cpp  Seat.h  db_tables.sql  main.cpp  workflow.h
command/: Command.cpp  Command.h  CreateMovieCommand.cpp  CreateMovieCommand.h  CreateSeance.cpp  CreateSeance.h  CreateSeanceCommand.cpp  CreateSeanceCommand.h  DeleteMovieCommand.cpp  DeleteMovieCommand.h  DeleteSeance.cpp  DeleteSeance.h  DeleteSeanceCommand.cpp  DeleteSeanceCommand.h  InitializeAdminAccount.cpp  InitializeAdminAccount.h  InitializeAdminAccountCommand.cpp  InitializeAdminAccountCommand.h  InitializeCinemaSystem.cpp  InitializeCinemaSystem.h  InitializeCinemaSystemCommand.cpp  InitializeCinemaSystemCommand.h  InitializeRooms.cpp  InitializeRooms.h  InitializeRoomsCommand.cpp  InitializeRoomsCommand.h  ListMoviesCommand.cpp  ListMoviesCommand.h  ListSeancesCommand.cpp  ListSeancesCommand.h  ListSeansesCommand.cpp  ListSeansesCommand.h  LoginUserCommand.cpp  LoginUserCommand.h  OrderSeat.cpp  OrderSeat.h  OrderSeatCommand.cpp  OrderSeatCommand.h  RegisterUserCommand.cpp  RegisterUserCommand.h  (+12 more)
db/: Database.cpp  Database.h  QueryLoader.cpp  QueryLoader.h  QueryParser.cpp  QueryParser.h
db/sql_queries/: description_movie_create.sql  description_movie_delete_by_id.sql  description_movie_insert.sql  descriptions_movie_create.sql  descriptions_movie_select.sql  descriptions_movie_select_by_id.sql  movie_create.sql  movie_delete_by_id.sql  movie_description_create.sql  movie_insert.sql  movie_select_by_id.sql  movie_select_by_name.sql  movies_create.sql  room_insert_by_name.sql  room_select_by_name.sql  room_select_by_seans_name.sql  room_select_occupied_rooms.sql  room_update_by_id.sql  rooms_create.sql  seans_create.sql  seans_delete.sql  seans_insert.sql  seans_select_all.sql  seans_select_by_id.sql  seans_select_by_movie_id.sql  seans_select_by_name.sql  seat_delete_by_id.sql  seat_insert.sql  seat_select_by_room_id.sql  seat_select_by_room_id_and_number_in_room.sql  seat_update_by_id.sql  seat_update_by_room_id.sql  seats_create.sql  user_insert.sql  user_select_by_name.sql  users_create.sql
exception/: InitializeDatabaseException.h  UserNotFoundException.h
movie/: Movie.cpp  Movie.h  MovieDescription.cpp  MovieDescription.h
room/: CinemaRoom.cpp  CinemaRoom.h  CinemaRoomFactory.cpp  Room.h  RoomDescription.cpp  RoomDescription.h  Seat.cpp  Seat.h
rooms/: rooms_create.sql  rooms_delete.sql  rooms_insert.sql  rooms_insert_room_name.sql  rooms_select_by_room_id.sql  rooms_select_by_seans_id.sql  rooms_select_by_seans_name.sql
seance/: Seance.cpp  Seance.h
users/: users_delete.sql  users_delete_delete.sql  users_insert_admin.sql  users_insert_user.sql  users_select.sql
